# matlab-analyzer

./: MATLAB.g  Pipfile  README.md  flake.nix  generate.sh  pyproject.toml  test2.m  test_all.py  test_all.sh  test_one.sh
matlab-parser/: main.py  util.py
tests/: test.py  test_bad.m  test_good.m  test_simple.m
tests/invalid/: cell_array.m  dot_path.m  end_keyword.m  lhs.m  line_wrap.m  literal_numbers.m  superclass_method.m  tilde.m
tests/valid/: arrays.m  block_comment.m  call_superclass_method.m  dot_path.m  empty_statement.m  functions.m  indexing.m  lambda.m  lhs.m  line_continuation.m  literal_arrays.m  literal_numbers.m  pre_post_unary.m  special_indexes.m  statement_separator.m  tilde.m
